create html/add categories

--- a/html/product.html
+++ b/html/product.html
@@ -197,7 +197,7 @@
               </div>
             </div>
           </div>
-          <h1 class="product_card__title">
+          <h1 class="section__title_page">
             Бересклет форчуна "Emerald Gold - Эмеральд Голд"
           </h1>
           <div class="product_card__wrap">
