--- a/categories.html
+++ b/categories.html
@@ -205,7 +205,12 @@
           <div class="categories__grid">
             <a href="" class="categories__box">
               <div class="categories__image">
-                <img src="./img/categories_1.png" alt="" />
+                <img
+                  class="img"
+                  src="./img/categories_1.png"
+                  alt=""
+                  loading="lazy"
+                />
               </div>
               <h2 class="categories__name">Колоновидные деревья</h2>
             </a>
