add slides main/add categories/update footer

--- a/index.html
+++ b/index.html
@@ -275,7 +275,55 @@
                 <a class="promo__btn" href="">Открыть все</a>
               </div>
             </div>
-            <div class="promo__slider"></div>
+            <div class="promo_slider">
+              <div
+                class="swiper js__swiper"
+                id="swiper__promo_slider"
+                data-swiper='{"slidesPerView": 1, "pagination": {"el": ".promo_slider__pagination","type": "bullets","clickable": "true"}}'
+              >
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="promo_slider__slide">
+                      <div class="promo_slider__img">
+                        <img class="img" src="./img/promo.png" alt="" />
+                      </div>
+                      <div class="promo_slider__box">
+                        <div class="promo_slider__title">
+                          Покупайте больше саженцев ореха <b>платите меньше</b>
+                        </div>
+                        <a href="" class="promo_slider__btn">
+                          Смотреть все
+                          <svg class="promo_slider__icon">
+                            <use href="./img/icons.svg#icon_arrow-link"></use>
+                          </svg>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="promo_slider__slide">
+                      <div class="promo_slider__img">
+                        <img class="img" src="./img/promo.png" alt="" />
+                      </div>
+                      <div class="promo_slider__box">
+                        <div class="promo_slider__title">
+                          Покупайте больше саженцев ореха <b>платите меньше</b>
+                        </div>
+                        <a href="" class="promo_slider__btn">
+                          Смотреть все
+                          <svg class="promo_slider__icon">
+                            <use href="./img/icons.svg#icon_arrow-link"></use>
+                          </svg>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="promo_slider__pagination_wrap">
+                  <div class="promo_slider__pagination"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
